Address issues with collapsing navbar obscuring content.
Fixes #32

--- a/somebotweb/static/css/style.css
+++ b/somebotweb/static/css/style.css
@@ -57,3 +57,19 @@ h3, h2 {
     white-space: nowrap;
     text-overflow: ellipsis;
 }
+/*TODO: should probably just build from less :/*/
+/*bootstrap does not style dropdowns inverted in the navbar*/
+.inverse-dropdown {
+    background-color: #222;
+    border-color: #080808;
+}
+.inverse-dropdown>li>a {
+    color: #999;
+}
+.inverse-dropdown>li>a:hover {
+      color: #fff;
+      background-color: #000;
+}
+.inverse-dropdown>li>a:hover>.divider {
+    background-color: #000;
+}
